--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ p {
   font-family: Lato;
 }
 
+body {
+  margin: 0px;
+  background-color: slategray;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: rgb(0, 0, 0);
