--- a/style.css
+++ b/style.css
@@ -125,3 +125,21 @@ body {
     text-align: left;
   }
 }
+
+.home-split {
+  column-count: 1, 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.left-split {
+  font: white;
+  display: block;
+  margin: 2%;
+}
+
+.right-split {
+  font: white;
+  display: block;
+  margin: 2%;
+}
